[package]
name = "yew_spline"
version = "0.2.0"
edition = "2021"
authors = ["kf@krirogn.dev <kf@krirogn.dev>"]
description = "Spline runtime component for Yew"
repository = "https://github.com/krirogn/yew_spline"
homepage = "https://krirogn.dev"
keywords = ["yew", "spline", "3D"]
categories = ["wasm"]
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlCanvasElement"] }